--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,6 +64,30 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
-.navigation {
-	color:red;
+
+*{
+	border: 4px solid grey;
+}
+
+nav a { 
+	padding:6px ;
+	border:3px solid pink;
+	text-align:center;	
+	}
+
+
+header{
+}
+
+.box{
+	display: inline-block;
+	width:25%;
+	margin: 0 3%;
+}
+
+
+
+
+footer{
+	text-align:center;
 }
