--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -70,14 +70,34 @@ h1, h2, h3, h4, h5 {
 }
 
 nav a { 
-	padding:6px ;
-	border:3px solid pink;
+	/* weidth:100%
+	height:100%
+	border:3px solid pink; */
 	text-align:center;	
 	}
 
+	nav > a { 
+		color: gray
+		text-decoration: none;
+		margin: 2%;
+			}
+	
+	.title{
+	text-align: center;
+	margin: 5%
+	display: inline-block;
+			}
 
-header{
-}
+	.slogan{
+	padding: 50px;
+	font-size: 60px
+	weidth: 50%
+
+	.image{
+		image-right: 20px
+		weidth: 50%
+	}
+	
 
 .box{
 	display: inline-block;
@@ -86,8 +106,9 @@ header{
 }
 
 
-
-
 footer{
 	text-align:center;
+}
+.Services, .Product, .Vison{
+
 }
