--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -53,7 +53,7 @@ table {
 }
 
 html, body {
-    height: 100%;
+   /* height: 100%;*/
     font-family: 'Titillium Web', sans-serif;
 }
 
@@ -62,53 +62,73 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
-
 /* Your code starts here! */
+
+body{
+		  border: 1px solid white;
+		  margin: 40px;
+		  padding: 40px;
+       }
 
 *{
 	border: 4px solid grey;
 }
 
-nav a { 
-	/* weidth:100%
-	height:100%
-	border:3px solid pink; */
-	text-align:center;	
-	}
+.container div h1 {
+	font-size: 60px;
 
-	nav > a { 
-		color: gray
+}
+
+.container div{
+	display: inline-block;
+	width: 50%;
+	vertical-align: middle;
+	margin: 5%; 2%;
+}
+
+.container img{
+		display: inline;
+		vertical-align: middle;
+		
+}	
+
+nav > a { 
+		color: gray;
 		text-decoration: none;
 		margin: 2%;
+		text-align: center;
 			}
-	
-	.title{
+nav {
 	text-align: center;
-	margin: 5%
-	display: inline-block;
-			}
+}
 
-	.slogan{
-	padding: 50px;
-	font-size: 60px
-	weidth: 50%
+.div1{
+	display:inline-block;
+	width:27%;
+	margin: 4%; 1.5%
+}
 
-	.image{
-		image-right: 20px
-		weidth: 50%
-	}
+.div2{
+	display:inline-block;
+	width:18%;
+	margin: 4%; 2%;
 	
 
-.box{
-	display: inline-block;
-	width:25%;
-	margin: 0 3%;
 }
+
+.middle-img{
+text-align: center;
+width: 90%;
+}
+
+contact{
+text-align: left;
+margin: 4%; 2%;
+}
+
+
 
 
 footer{
 	text-align:center;
-}
-.Services, .Product, .Vison{
-
 }
