--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -66,8 +66,8 @@ h1, h2, h3, h4, h5 {
 
 body{
 		  border: 1px solid white;
-		  margin: 40px;
-		  padding: 40px;
+		  margin: 60px;
+		  padding:100px;
        }
 
 *{
@@ -89,8 +89,15 @@ body{
 .container img{
 		display: inline;
 		vertical-align: middle;
-		
-}	
+	}	
+
+.boxed{
+border: 1px solid black;	
+text-align:center;
+width:25px;
+height:17px;
+margin: 20%;
+}
 
 nav > a { 
 		color: gray;
@@ -112,22 +119,17 @@ nav {
 	display:inline-block;
 	width:18%;
 	margin: 4%; 2%;
-	
-
 }
 
 .middle-img{
+width:90%
 text-align: center;
-width: 90%;
+	}
+
+.contact{
+text-align:left;
+width:100%;
 }
-
-contact{
-text-align: left;
-margin: 4%; 2%;
-}
-
-
-
 
 footer{
 	text-align:center;
